--- a/parts/account/register.jade
+++ b/parts/account/register.jade
@@ -62,7 +62,7 @@ template(name='register')
                 .ui.hidden.divider
                 if can_register
                     //- if registering
-                    .ui.fluid.big.circular.basic.button.register(class=enter_class)
+                    .ui.fluid.big.basic.button.register(class=enter_class)
                         i.user.plus.icon
                         |register
                 else
