--- a/parts/discussion.jade
+++ b/parts/discussion.jade
@@ -70,7 +70,7 @@ template(name='discussion_edit')
         .ui.stackable.padded.grid
             .centered.middle.aligned.row 
                 .four.wide.center.aligned.column
-                    a.ui.icon.green.big.circular.button(href="/discussion/#{_id}/view" title='save')
+                    a.ui.icon.green.big.button(href="/discussion/#{_id}/view" title='save')
                         i.checkmark.big.icon
                 .eight.wide.center.aligned.column
                     .ui.header 
