--- a/parts/finance/debit_view.jade
+++ b/parts/finance/debit_view.jade
@@ -4,7 +4,7 @@ template(name='debit_view')
             .centered.row 
                 .five.wide.column
                     a(href="/u/#{_author.username}") 
-                        img.ui.circular.centered.pointer.zoomer.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                        img.ui.centered.pointer.zoomer.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                         .ui.large.center.aligned.header.pointer.zoomer
                             |#{_author.name}
                 .five.wide.column
@@ -20,7 +20,7 @@ template(name='debit_view')
                     if tags
                         i.tags.icon
                         each tags 
-                            .ui.big.basic.circular.label #{this}
+                            .ui.big.basic.label #{this}
                     +voting_full
                     .ui.small.header
                         i.clock.icon
@@ -31,7 +31,7 @@ template(name='debit_view')
                     //- +array_view key='location_tags' label='location_tags' direct=true
                 .five.wide.column
                     a(href="/u/#{recipient.username}")
-                        img.ui.circular.centered.fluid.pointer.zoomer.image(src="{{c.url recipient.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                        img.ui.centered.fluid.pointer.zoomer.image(src="{{c.url recipient.profile_image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                         .ui.large.center.aligned.header.pointer.zoomer
                             |#{recipient.name}
                             
