--- a/parts/food/drinks.jade
+++ b/parts/food/drinks.jade
@@ -93,7 +93,7 @@ template(name='drink_view')
                             +i name='event-accepted'
                             |checkins
                         unless checking_in
-                            .ui.icon.large.basic.circular.button.checkin_drink(title='checkin drink')
+                            .ui.icon.large.basic.button.checkin_drink(title='checkin drink')
                                 i.plus.icon
                         if checking_in
                             .ui.fluid.action.input
