--- a/parts/profile/user_credits.jade
+++ b/parts/profile/user_credits.jade
@@ -9,7 +9,7 @@ template(name='user_credits')
         
     i.tags.icon(title='credit tags')
     each credit_tags
-        .ui.basic.circular.label #{title}
+        .ui.basic.label #{title}
             small #{count}
         
     .ui.stackable.cards.scrolling
