--- a/parts/profile/user_sent.jade
+++ b/parts/profile/user_sent.jade
@@ -8,7 +8,7 @@ template(name='user_sent')
         
     i.tags.icon(title='credit tags')
     each debit_tags
-        .ui.basic.circular.label #{title}
+        .ui.basic.label #{title}
             small #{count}
         
     .ui.stackable.cards.scrolling
