--- a/parts/school/course_post.jade
+++ b/parts/school/course_post.jade
@@ -3,7 +3,7 @@
 //         .ui.stackable.padded.grid
 //             .middle.aligned.row 
 //                 .sixteen.wide.column
-//                     a.ui.circular.basic.button(href="/course/#{course_id}")
+//                     a.ui.basic.button(href="/course/#{course_id}")
 //                         i.chevron.left.icon
 //                         i.chalkboard.big.icon
 //                     .ui.large.inline.header #{title}
@@ -12,7 +12,7 @@
                     
 //                     if can_edit
 //                         a.edit_course_post(href="/course/#{course_id}/post/#{_id}/edit" title='edit')
-//                             i.large.circular.link.pencil.icon
+//                             i.large.link.pencil.icon
 
 //             .row 
 //                 .three.wide.column
@@ -56,14 +56,14 @@
 //         .ui.stackable.padded.grid
 //             .centered.middle.aligned.row 
 //                 .four.wide.center.aligned.column
-//                     a.ui.icon.green.big.circular.button(href="/course/#{course_id}/post/#{_id}" title='save')
+//                     a.ui.icon.green.big.button(href="/course/#{course_id}/post/#{_id}" title='save')
 //                         i.checkmark.big.icon
 //                 .eight.wide.center.aligned.column
 //                     .ui.header 
 //                         +icolor name='news' cl='ui image inline pointer'
 //                         |edit course post
 //                 .four.wide.center.aligned.column
-//                     i.large.link.circular.red.remove.icon.delete_course_post
+//                     i.large.link.red.remove.icon.delete_course_post
 //             .row
 //                 .four.wide.column.scrolling
 //                     .ui.header 
