--- a/parts/delta/model_edit.jade
+++ b/parts/delta/model_edit.jade
@@ -12,9 +12,9 @@ template(name='model_edit_layout')
                     |created
                     +creation_info
                     div
-                    a.ui.big.icon.green.circular.button(href="/m/#{slug}")
+                    a.ui.big.icon.green.button(href="/m/#{slug}")
                         i.big.checkmark.icon
-                    i#delete_model.trash.red.circular.link.icon
+                    i#delete_model.trash.red.link.icon
                     .ui.divider
                     +boolean_edit key='show_filter_bar' label='show filter bar' direct=true
                     +boolean_edit key='show_facets' label='show facets' direct=true
