--- a/parts/food/shop.jade
+++ b/parts/food/shop.jade
@@ -72,7 +72,7 @@ template(name='shop_edit')
         .ui.stackable.padded.grid
             .row 
                 .five.wide.column
-                    a.ui.green.big.icon.circular.button(href="/shop/#{_id}/view" title='save')
+                    a.ui.green.big.icon.button(href="/shop/#{_id}/view" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         +icon name='shop'
