--- a/parts/post.jade
+++ b/parts/post.jade
@@ -22,14 +22,14 @@
 //             .middle.aligned.row 
 //                 .sixteen.wide.column
 //                     a(href="/m/post")
-//                         i.newspaper.circular.link.big.icon
+//                         i.newspaper.link.big.icon
 //                     .ui.large.inline.header #{title}
 //                     // div
 //                     // .ui.inline.grey.header {{from_now start_datetime}}
                     
 //                     if can_edit
 //                         a.edit_post(href="/m/post/#{_id}/edit" title='edit')
-//                             i.big.circular.link.pencil.icon
+//                             i.big.link.pencil.icon
 
 //             .row 
 //                 .four.wide.column
@@ -68,14 +68,14 @@
 //         .ui.stackable.padded.grid
 //             .centered.middle.aligned.row 
 //                 .four.wide.center.aligned.column
-//                     a.ui.icon.green.big.circular.button(href="/m/post/#{_id}/view" title='save')
+//                     a.ui.icon.green.big.button(href="/m/post/#{_id}/view" title='save')
 //                         i.checkmark.big.icon
 //                 .eight.wide.center.aligned.column
 //                     .ui.header 
 //                         +icolor name='news' cl='ui image inline pointer'
 //                         |edit post
 //                 .four.wide.center.aligned.column
-//                     i.large.link.circular.red.remove.icon.delete_post
+//                     i.large.link.red.remove.icon.delete_post
 //             .row
 //                 .four.wide.column
 //                     .ui.header 
