--- a/parts/profile/user_delivery.jade
+++ b/parts/profile/user_delivery.jade
@@ -3,7 +3,7 @@ template(name='user_delivery')
         +icolor name='delivery'
         |user delivery
     if is_current_user
-        a.ui.circular.basic.icon.button(href="/u/#{current_user.username}/edit/delivery")
+        a.ui.basic.icon.button(href="/u/#{current_user.username}/edit/delivery")
             i.pencil.icon
             |edit delivery settings
     div
