--- a/parts/school/school.jade
+++ b/parts/school/school.jade
@@ -4,7 +4,7 @@
 //             .ui.header 
 //                 i.university.icon
 //                 |school
-//             a.ui.circular.icon.button(href="/m/course")
+//             a.ui.icon.button(href="/m/course")
 //                 i.cog.icon
 //         .twelve.wide.column
 //             .ui.header
